Fix padding on header/hero, & add wrap to hero

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ a {
     display: flex;
     justify-content: space-around;
     background-color: #1f2937;
-    padding-top: 20px;
+    padding: 20px 20px;
 }
 
 .logo-header {
@@ -57,6 +57,8 @@ a {
     color: #f9faf8;
     background-color: #1f2937;
     flex: auto;
+    flex-wrap: wrap;
+    padding: 0 20px;
 }
 
 .hero-image-container {
@@ -68,10 +70,11 @@ a {
     margin: 80px 0px;
     border-radius: 10px;
     
+    
 }
 
 .hero-image {
-   width: 200px;
+   width: 300px;
 }
 
 .hero {
